Fix misaligned review radio buttons

--- a/app/assets/stylesheets/star_radio.scss
+++ b/app/assets/stylesheets/star_radio.scss
@@ -15,6 +15,7 @@
   input {
     z-index: 5;
     cursor: pointer;
+    margin-top: 4rem;
     outline: 0;
     border: 0;
     opacity: 0;
@@ -28,35 +29,30 @@
     grid-column: 1;
     grid-row: 1;
     margin-left: 1.8rem;
-    margin-top: 3rem;
     width: 4rem;
   }
   #two {
     grid-column: 2;
     grid-row: 1;
     margin-left: 1.75rem;
-    margin-top: 3rem;
     width: 3rem;
   }
   #three {
     grid-column: 3;
     grid-row: 1;
     margin-left: 2.8rem;
-    margin-top: 3rem;
     width: 4rem;
   }
   #four {
     grid-column: 4;
     grid-row: 1;
     margin-left: -2.6rem;
-    margin-top: 3rem;
     width: 4rem;
   }
   #five {
     grid-column: 5;
     grid-row: 1;
     margin-left: 1.75rem;
-    margin-top: 3rem;
     width: 4rem;
   }
 
